# UAVFreetCenterMonitor

./: README.md  nats.compose.yaml
backend/: main.py
gui/uavfleet_center_monitor_webpanel/: README.md  package-lock.json  package.json
gui/uavfleet_center_monitor_webpanel/src/: App.vue
mavlink_soft/: CMakeLists.txt
mavlink_soft/mavsdk-windows-x86/Debug/lib/: mavsdkd.lib
mavlink_soft/mavsdk-windows-x86/Release/lib/: mavsdk.lib
mavlink_soft/mavsdk-windows-x86/Release/lib/pkgconfig/: mavsdk.pc
mavlink_soft/mavsdk-windows-x86/include/mavsdk/: mavlink_include.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/ardupilotmega/: ardupilotmega.h  mavlink.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/common/: common.h  mavlink.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/csAirLink/: csAirLink.h  mavlink.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/cubepilot/: cubepilot.h  mavlink.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/icarous/: icarous.h  mavlink.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/loweheiser/: loweheiser.h  mavlink.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/minimal/: mavlink.h  minimal.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/standard/: mavlink.h  standard.h
mavlink_soft/mavsdk-windows-x86/include/mavsdk/mavlink/uAvionix/: mavlink.h  uAvionix.h
mavlink_soft/mavsdk-windows-x86/lib/cmake/MAVSDK/: MAVSDKConfigVersion.cmake  MAVSDKTargets.cmake
mavlink_soft/src/: collector.cpp
mavlink_soft/src/modules/: nats_conn.h
